fix overflow issue

--- a/webpage/stylesheets/sass/master.scss
+++ b/webpage/stylesheets/sass/master.scss
@@ -21,6 +21,7 @@
 body{
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 
   font-family: "Helvetica Neue", Helvetica, arial, freesans, clean, sans-serif;
   font-size: 100%;
